# obs-image-compare

./: CMakeLists.txt  README.md  image-compare.c
cmake/: CopyDependencies.cmake
data/: image_compare.effect
data/locale/: en-US.ini
